<resources>
    <string name="app_name">알고싶어</string>

    <string name="close">닫기</string>
    <string name="no_text">아니요</string>
    <string name="end_text">종료할게요</string>
    <string name="delete_text">삭제할게요</string>
    <string name="confirm_text">알겠습니다</string>
    <string name="confirm">확인</string>
    <string name="cancel">취소</string>
    <string name="privacy_policy_text"><u>개인정보 처리방침</u></string>
    <string name="policy_body_text">내용에 동의합니다.(필수)</string>
    <string name="policy_guide_text">개인정보 처리방침을 체크해주세요.</string>
    <string name="back_press_guide_msg">뒤로가기 버튼을 한번 더 누르면 종료합니다.</string>

    <!--menu-->
    <string name="menu_qr_code">QR스캔</string>
    <string name="menu_preview">Preview</string>
    <string name="menu_delete">Delete</string>
    <string name="menu_share">Share</string>
    <string name="menu_done">확인</string>
    <string name="menu_more">더보기</string>
    <!--menu-->

    <string name="answer_count">답변 %d명</string>
    <string name="answer_now_count">현재 답변 %d명</string>
    <string name="survey_state_before">수정중</string>
    <string name="survey_state_ing">진행중</string>
    <string name="survey_state_end">종료</string>

    <string name="add_question">다른 질문 작성하기</string>
    <string name="finish_question">작성완료</string>
    <string name="question_no">Q%d.</string>

    <!--toolbar-->
    <string name="toolbar_preview">미리보기</string>
    <string name="toolbar_add_survey">질문 만들기</string>
    <string name="toolbar_sample">샘플보기</string>
    <string name="toolbar_my_survey">내 질문 리스트</string>
    <string name="toolbar_answer">답변 보기</string>
    <!--toolbar-->

    <!--sample-->
    <string name="sample_title">우리 가게 방문 이유 확인</string>
    <string name="sample_contents">저희 카페에 방문하는 이유가 무엇인지 손님분들의 이야기를 듣고자합니다. \n\n성심성의껏 답변해주신 내용으로 더더욱 발전하는 카페가 될게요.</string>
    <string name="sample_btn_title">답변 렛츠 고!</string>

    <!--sample-->

    <!--my survey-->
    <string name="my_survey_count">등록된 질문 %d건</string>
    <string name="my_survey_empty_btn_title">질문 만들기</string>
    <string name="my_survey_empty_title">작성한 질문이 없네요. 궁금한 질문을 만들어서 물어보세요!</string>
    <string name="my_survey_empty_contents">우리 가게 고객, 비어 있는 상가에 대한 동네 사람들의 의견 등</string>
    <!--my survey-->

    <!--answer-->
    <string name="answer_qr_text">질문 QR코드 보기</string>
    <string name="customer_survey_text">설문 보러 가기</string>
    <string name="survey_no">Q%s</string>
    <string name="survey_answer_date">%s 답변</string>

    <!--answer-->

    <!--kakao-->
    <string name="kakao_btn_text">카카오톡 간편 시작</string>
    <!--kakao-->

    <!--Login-->
    <string name="welcome_text">알고싶어에 오신걸\n환영합니다.</string>
    <!--Login-->

    <!--Dialog-->
    <string name="deleteAccountTitle">회원탈퇴</string>
    <string name="deleteAccountContents">등록했던 질문과 답변을 더이상 볼 수 없어요, 정말로 탈퇴하시겠어요?</string>
    <string name="deleteAccountYes">탈퇴할게요</string>

    <string name="questionCompleteTitle">질문 종료</string>
    <string name="questionCompleteContents">종료하면 다시 시작할 수 없어요! 질문을 진짜로 종료할건가요?</string>

    <string name="questionDeleteAllTitle">이 질문 전체삭제</string>
    <string name="questionDeleteAllContents">삭제된 질문은 복구되지 않아요. 정말로 해당 질문을 삭제할건가요?</string>

    <string name="questionDeleteTitle">이 질문 삭제</string>
    <string name="questionDeleteContents">삭제된 질문은 복구되지 않아요. 정말로 해당 질문을 삭제할건가요?</string>

    <string name="completeCheckTitle">잠깐!</string>
    <string name="completeCheckContents">직접 질문에 답해보고 답변하는 사람 입장에서 질문지를 점검해보는 게 어떨까요?</string>
    <string name="completeCheckCancel">점검해 볼게요</string>
    <string name="completeCheckOk">완료할게요</string>
    <!--Dialog-->

    <!--SnackBar-->
    <string name="login_complete_msg">로그인 되었습니다.</string>
    <string name="new_survey_title_guide">간단한 설명이 있으면 답하는데 조금 수월해진답니다.</string>
    <string name="new_question_title_guide">질문이 길면 지루해요. 질문은 3~4줄이 제일 적당하답니다.</string>
    <string name="question_first_delete_guide">첫번째 질문은 삭제할 수 없어요.</string>
    <string name="question_delete_complete_msg">해당 질문이 삭제되었습니다.</string>
    <string name="survey_complete_msg">질문 작성이 완료되었습니다.</string>
    <string name="survey_end_msg">진행중 질문이 종료되었습니다.</string>
    <string name="logout_msg">정상적으로 로그아웃 되었습니다.</string>
    <string name="user_delete_msg">회원탈퇴가 완료되었습니다.</string>
    <string name="save_img_complete_msg">QR 코드가 저장되었습니다.</string>
    <!--SnackBar-->

    <!--Qr-->
    <string name="qr_scanner_guide">QR코드를 찍고\n소중한 의견을 작성해주세요</string>
    <!--Qr-->

    <!--Setting-->
    <string name="setting_support">고객센터</string>
    <string name="setting_contact">문의하기</string>
    <string name="setting_privacy_policy">개인정처리방침</string>
    <string name="setting_license">오픈소스 라이선스</string>
    <string name="setting_version">버전정보 %s</string>
    <!--Setting-->
</resources>