<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/privacyPolicyClickText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="32dp"
            android:layout_marginBottom="32dp"
            android:text="@string/privacy_policy_text"
            android:textColor="#2167F3"
            android:textSize="14dp"
            app:layout_constraintBottom_toTopOf="@+id/PolicyBtnContainer"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/privacyPolicyText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="4dp"
            android:layout_marginTop="32dp"
            android:layout_marginBottom="32dp"
            android:text="@string/policy_body_text"
            android:textColor="@color/black"
            android:textSize="14dp"
            app:layout_constraintBottom_toTopOf="@+id/PolicyBtnContainer"
            app:layout_constraintStart_toEndOf="@+id/privacyPolicyClickText"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageView
            android:id="@+id/privacyPolicyCheck"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            android:layout_marginBottom="32dp"
            android:layout_marginEnd="8dp"
            android:src="@drawable/selector_check_box"
            app:layout_constraintBottom_toTopOf="@+id/PolicyBtnContainer"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/privacyPolicyText"
            app:layout_constraintTop_toTopOf="parent" />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/PolicyBtnContainer"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent">

            <TextView
                android:id="@+id/policyCancelBtn"
                android:layout_width="0dp"
                android:layout_height="64dp"
                android:text="@string/cancel"
                android:textColor="@color/white"
                android:textSize="17dp"
                android:textStyle="bold"
                android:background="@color/disable_add_question_bg"
                android:gravity="center"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toStartOf="@+id/policyConfirmBtn"/>

            <TextView
                android:id="@+id/policyConfirmBtn"
                android:layout_width="0dp"
                android:layout_height="64dp"
                android:text="@string/confirm"
                android:textColor="@color/selector_white_gray_text"
                android:textSize="17dp"
                android:textStyle="bold"
                android:background="@drawable/selector_finish_question_bg"
                android:gravity="center"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/policyCancelBtn"/>

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>