<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/white" >

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/white"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toTopOf="@+id/sampleBtn"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="500dp"
                android:background="@color/white" >

                <include
                    android:id="@+id/sampleToolbar"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    layout="@layout/toolbar"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="parent"/>

                <TextView
                    android:id="@+id/sampleTitle"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="32dp"
                    android:layout_marginStart="16dp"
                    android:layout_marginEnd="16dp"
                    android:text="@string/sample_title"
                    android:textStyle="bold"
                    android:textSize="24dp"
                    android:textColor="@color/title_text"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/sampleToolbar"/>

                <ImageView
                    android:id="@+id/sampleImg"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="32dp"
                    android:src="@drawable/saly_26"
                    app:layout_constraintTop_toBottomOf="@+id/sampleTitle"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toEndOf="parent" />

                <TextView
                    android:id="@+id/sampleContents"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="32dp"
                    android:layout_marginBottom="30dp"
                    android:layout_marginStart="16dp"
                    android:layout_marginEnd="16dp"
                    android:padding="20dp"
                    android:background="@drawable/border_sample_text_bg"
                    android:elevation="2dp"
                    android:text="@string/sample_contents"
                    android:textColor="@color/comment_text"
                    android:textSize="16dp"
                    app:layout_constraintTop_toBottomOf="@+id/sampleImg"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toEndOf="parent" />

            </androidx.constraintlayout.widget.ConstraintLayout>

        </ScrollView>

        <TextView
            android:id="@+id/sampleBtn"
            android:layout_width="0dp"
            android:layout_height="64dp"
            android:layout_marginTop="50dp"
            android:gravity="center"
            android:text="@string/sample_btn_title"
            android:textSize="17dp"
            android:textColor="@color/white"
            android:textStyle="bold"
            android:background="@drawable/selector_press_btn_bg"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"/>

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>